# C-Demos

./: .gitignore
Select/: CMakeLists.txt  client.c  simpleclient.c
Socket/: CMakeLists.txt
SocketForLinux/: CMakeLists.txt  main.c  server.c  simpleListen.c
SocketForLinux/hexdump/: CMakeLists.txt  Makefile  cmake_install.cmake  hexdump.c
SocketForLinux/include/: hexdump.h
SocketForWin/: CMakeLists.txt  main.cpp
TestPrintf/: main.c
ThreadForWin/: CMakeLists.txt  SaleTickets.h  SaleTockets.cpp  main.cpp  stdafx.h
apue/5_11/: CMakeLists.txt  main.c
getaddrinfo/: CMakeLists.txt  client.c
select/: main.c
testPrintf/: CMakeLists.txt
